@startuml

!theme plain
top to bottom direction
skinparam linetype ortho

' --- ENTITĂȚI ȘI DOMAIN MODEL ---

class Product {
    - id: int
    - nume: String
    - pret: double
    - categorie: CategorieBautura
    - tip: TipBautura
    - reteta: Reteta
}

class Reteta {
    - id: int
    - ingrediente: List<IngredientReteta>
}

class IngredientReteta {
    - denumire: String
    - cantitate: double
}

class Stoc {
    - id: int
    - ingredient: String
    - cantitate: double
    - stocMinim: double
}

class Order {
    - id: int
    - items: List<OrderItem>
    - totalPrice: double
    + computeTotalPrice(): void
}

class OrderItem {
    - product: Product
    - quantity: int
    - total: double
}

' --- STRATUL DE ACCES DATE (REPOSITORY) ---

interface Repository<ID, E> << interface >> {
    + findAll(): List<E>
    + findOne(id: ID): E
    + save(entity: E): void
    + delete(id: ID): void
    + update(entity: E): void
}

abstract class AbstractRepository<ID, E> implements Repository
class FileAbstractRepository<ID, E> extends AbstractRepository
class FileOrderRepository extends FileAbstractRepository
class FileProductRepository extends FileAbstractRepository
class FileRetetaRepository extends FileAbstractRepository
class FileStocRepository extends FileAbstractRepository

' --- STRATUL DE LOGICĂ (SERVICE) ---

class DrinkShopService {
    ' S-au eliminat listele de date (allProducts etc.) pentru a reduce cuplajul
    - productService: ProductService
    - orderService: OrderService
    - retetaService: RetetaService
    - stocService: StocService
    + finalizeOrder(order: Order): void
}

class ProductService {
    - productRepo: Repository<Integer, Product>
}

class OrderService {
    - orderRepo: Repository<Integer, Order>
}

class RetetaService {
    - retetaRepo: Repository<Integer, Reteta>
}

class StocService {
    - stocRepo: Repository<Integer, Stoc>
}

' --- VALIDARE ȘI EXCEPTII ---

interface Validator<T> << interface >>
class ProductValidator implements Validator
class OrderValidator implements Validator
class OrderItemValidator implements Validator
class RetetaValidator implements Validator
class StocValidator implements Validator
class ValidationException

' --- RELAȚII CORECTATE ---

' 1. Conectarea clasei Stoc (Problema 1)
Stoc "1" -- "1" IngredientReteta : monitorizează >

' 2. Legătura Product - Reteta (Problema 2)
Product "1" *-- "1" Reteta : are >

' 3. Curățarea atributelor duplicate (Problema 3)
' Atributele din Order și OrderItem au fost rescrise simplificat în definițiile claselor de mai sus.

' 4. Reducerea cuplajului în DrinkShopService (Problema 4)
' Atributele de tip List au fost eliminate din definiția clasei DrinkShopService.

' 5. Structura Service clară (Problema 5)
DrinkShopService "1" *-- "1" ProductService
DrinkShopService "1" *-- "1" OrderService
DrinkShopService "1" *-- "1" RetetaService
DrinkShopService "1" *-- "1" StocService

' 6. Legătura ValidationException (Problema 6)
Validator ..> ValidationException : aruncă >

' Alte asocieri necesare
Order "1" *-- "*" OrderItem
OrderItem "1" o-- "1" Product
Reteta "1" *-- "*" IngredientReteta

@enduml